added: converted files generated from the markdown

--- a/book/basics/simulations.html
+++ b/book/basics/simulations.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Installation - Disolv Documentation</title>
+        <title>Simulation - Disolv Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html" class="active"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../design/design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/concepts.html"><strong aria-hidden="true">3.1.</strong> Concept</a></li><li class="chapter-item expanded "><a href="../design/software.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="../design/architecture.html"><strong aria-hidden="true">3.3.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../design/workflow.html"><strong aria-hidden="true">3.4.</strong> Workflow</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/crates.html"><strong aria-hidden="true">4.</strong> Crates</a></li><li class="chapter-item expanded "><a href="../core/core.html"><strong aria-hidden="true">5.</strong> Core</a></li><li class="chapter-item expanded "><a href="../models/models.html"><strong aria-hidden="true">6.</strong> Models</a></li><li class="chapter-item expanded "><a href="../devices/devices.html"><strong aria-hidden="true">7.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../devices/vehicles.html"><strong aria-hidden="true">7.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="../devices/rsu.html"><strong aria-hidden="true">7.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="../devices/controller.html"><strong aria-hidden="true">7.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="../network/network.html"><strong aria-hidden="true">8.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../network/resources.html"><strong aria-hidden="true">8.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../network/slice.html"><strong aria-hidden="true">8.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../network/bs.html"><strong aria-hidden="true">8.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../input/input.html"><strong aria-hidden="true">9.</strong> Input</a></li><li class="chapter-item expanded "><a href="../output/output.html"><strong aria-hidden="true">10.</strong> Output</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basics/simulations.html" class="active"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../design/design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/concepts.html"><strong aria-hidden="true">3.1.</strong> Concept</a></li><li class="chapter-item expanded "><a href="../design/software.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="../design/architecture.html"><strong aria-hidden="true">3.3.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../design/workflow.html"><strong aria-hidden="true">3.4.</strong> Workflow</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/crates.html"><strong aria-hidden="true">4.</strong> Crates</a></li><li class="chapter-item expanded "><a href="../core/core.html"><strong aria-hidden="true">5.</strong> Core</a></li><li class="chapter-item expanded "><a href="../models/models.html"><strong aria-hidden="true">6.</strong> Models</a></li><li class="chapter-item expanded "><a href="../devices/devices.html"><strong aria-hidden="true">7.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../devices/vehicles.html"><strong aria-hidden="true">7.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="../devices/rsu.html"><strong aria-hidden="true">7.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="../devices/controller.html"><strong aria-hidden="true">7.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="../network/network.html"><strong aria-hidden="true">8.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../network/resources.html"><strong aria-hidden="true">8.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../network/slice.html"><strong aria-hidden="true">8.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../network/bs.html"><strong aria-hidden="true">8.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../input/input.html"><strong aria-hidden="true">9.</strong> Input</a></li><li class="chapter-item expanded "><a href="../output/output.html"><strong aria-hidden="true">10.</strong> Output</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,17 +173,53 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
+                        <h1 id="simulation"><a class="header" href="#simulation">Simulation</a></h1>
+<p>In general terms, simulation is a representation of a real-world phenomenon.
+Any process that is observed in the world can be represented in a simulation provided its behavior can be captured in the form of a mathematical model.
+The evolution of the model over time is observed using simulations.</p>
+<h2 id="time"><a class="header" href="#time">Time</a></h2>
+<p>Models that are defined with changes occuring in continuous time are simulated in the continuous time paradigm.
+Typically, the models are represented using differential equations.
+Inherently, the simulation of continuous time models can be expensive in terms of computational cost.
+While time can be theoretically defined as a continuous quantity, the empirical measurements are often measured at a specific time instants.
+Based on this idea, time can be modeled as a discrete quantity in the simulations.
+An added benefit is that the simulations are better in terms of scalability.</p>
+<p>Two paradigms are possible with discrete time representation -</p>
+<h4 id="discrete-time-simulation-dts"><a class="header" href="#discrete-time-simulation-dts">Discrete-Time Simulation (DTS)</a></h4>
+<p>The models that undergo changes at discrete time instants are called discrete-time simulation models.
+After every pre-defined time interval, the behavior of the models are updated.</p>
+<h4 id="discrete-events-simulation-des"><a class="header" href="#discrete-events-simulation-des">Discrete Events Simulation (DES)</a></h4>
+<p>The models are updated whenever a certain <em>event</em> happens at any discrete-time instant.
+While this is similar to discrete-time simulation, <em>event</em> oriented models can be used to represent inter-dependent behavior of multiple models.
+An added benefit is that the simulation can skip model updates of time instants with no events.</p>
+<h2 id="agent-based-model-abm-simulation"><a class="header" href="#agent-based-model-abm-simulation">Agent-based Model (ABM) Simulation</a></h2>
+<p>Real-world systems are often a combination of several individual components with their own properties.
+In ABM simulation, each component and its behavior is modeled as an individual component.
+Each agent is allowed to behave based on its parameters and can optionally interact with other agents.
+Although the interaction is optional, typically ABM representation is incorporated where agent interactions are essential modeling requirements.
+In simple scenarios, the interactions between various components can be easily determined and represented with simple simulation models.
+However, in most of the real-world processes, the interplay between the components are extremely complex and are hard to determine with simple mathematical equations.
+In such cases, ABM can be a powerful tool that allows the observation of emergence of the behavior over a period.
+Time can be represented in either continuous or discrete fashion, although, discrete time is commonly selected for its performance benefits.</p>
+<p>Several general purpose ABM simulators exist -</p>
+<ul>
+<li><a href="https://mesa.readthedocs.io/en/stable/">mesa</a></li>
+<li><a href="https://krabmaga.github.io/">krABMaga</a></li>
+<li><a href="https://cs.gmu.edu/~eclab/projects/mason/">MASON</a></li>
+<li><a href="https://juliadynamics.github.io/Agents.jl/stable/">Agents.jl</a></li>
+</ul>
+<p>Custom behavior models can be implemented using the frameworks.
+Some of the processes that can be candidates for simulation are vehicular traffic, mobile network communications, crowd movement simulations, infection propagation simulation etc.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../introduction.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../basics/basics.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../basics/basics.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../basics/vanet.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -193,11 +229,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../introduction.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../basics/basics.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../basics/basics.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../basics/vanet.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
