--- a/book/crates/crates.html
+++ b/book/crates/crates.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Installation - Disolv Documentation</title>
+        <title>Crates - Disolv Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html" class="active"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../design/design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/concepts.html"><strong aria-hidden="true">3.1.</strong> Concept</a></li><li class="chapter-item expanded "><a href="../design/software.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="../design/architecture.html"><strong aria-hidden="true">3.3.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../design/workflow.html"><strong aria-hidden="true">3.4.</strong> Workflow</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/crates.html"><strong aria-hidden="true">4.</strong> Crates</a></li><li class="chapter-item expanded "><a href="../core/core.html"><strong aria-hidden="true">5.</strong> Core</a></li><li class="chapter-item expanded "><a href="../models/models.html"><strong aria-hidden="true">6.</strong> Models</a></li><li class="chapter-item expanded "><a href="../devices/devices.html"><strong aria-hidden="true">7.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../devices/vehicles.html"><strong aria-hidden="true">7.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="../devices/rsu.html"><strong aria-hidden="true">7.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="../devices/controller.html"><strong aria-hidden="true">7.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="../network/network.html"><strong aria-hidden="true">8.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../network/resources.html"><strong aria-hidden="true">8.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../network/slice.html"><strong aria-hidden="true">8.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../network/bs.html"><strong aria-hidden="true">8.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../input/input.html"><strong aria-hidden="true">9.</strong> Input</a></li><li class="chapter-item expanded "><a href="../output/output.html"><strong aria-hidden="true">10.</strong> Output</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../design/design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/concepts.html"><strong aria-hidden="true">3.1.</strong> Concept</a></li><li class="chapter-item expanded "><a href="../design/software.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="../design/architecture.html"><strong aria-hidden="true">3.3.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../design/workflow.html"><strong aria-hidden="true">3.4.</strong> Workflow</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/crates.html" class="active"><strong aria-hidden="true">4.</strong> Crates</a></li><li class="chapter-item expanded "><a href="../core/core.html"><strong aria-hidden="true">5.</strong> Core</a></li><li class="chapter-item expanded "><a href="../models/models.html"><strong aria-hidden="true">6.</strong> Models</a></li><li class="chapter-item expanded "><a href="../devices/devices.html"><strong aria-hidden="true">7.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../devices/vehicles.html"><strong aria-hidden="true">7.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="../devices/rsu.html"><strong aria-hidden="true">7.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="../devices/controller.html"><strong aria-hidden="true">7.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="../network/network.html"><strong aria-hidden="true">8.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../network/resources.html"><strong aria-hidden="true">8.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../network/slice.html"><strong aria-hidden="true">8.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../network/bs.html"><strong aria-hidden="true">8.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../input/input.html"><strong aria-hidden="true">9.</strong> Input</a></li><li class="chapter-item expanded "><a href="../output/output.html"><strong aria-hidden="true">10.</strong> Output</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,17 +173,45 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
+                        <h1 id="disolv-crates"><a class="header" href="#disolv-crates">Disolv Crates</a></h1>
+<p>Simulator is divided into multiple crates to enable modular design.
+An onion-like layered design is incorporated with crates arranged in an hierarchical manner.</p>
+<!-- ![Onion Architecture for crates](../resources/images/crates/onion.png) -->
+<p align="center">
+  <img style="max-width: 45%; height: auto;" src="../resources/images/crates/onion_v2.png">
+</p>
+<h3 id="core"><a class="header" href="#core">Core</a></h3>
+<p><em>disolv-core</em> crate is the innermost layer of the simulator.
+This is independent of all the other Disolv crates.
+<em>disolv-core</em> contains the declarations and definitions that are used throughout the simulator.
+<em>disolv-core</em> serves as a template on top of which multiple specific implementations can be carried out depending on the scenario.
+The scheduler implementation and the agent triggering behavior are also implemented in this crate.</p>
+<h3 id="models"><a class="header" href="#models">Models</a></h3>
+<p><em>disolv-models</em> crate implements most of the primitive requirements imposed by the <strong>Core</strong>.
+Some general behavior applicable to any VANET device is also implemented in this crate.
+The goal is to provide a behavior as a reusable module that can be attached to multiple devices.
+Additional device-specific configuration is allowed through parameterization.</p>
+<h3 id="io"><a class="header" href="#io">I/O</a></h3>
+<p><em>disolv-input</em> and <em>disolv-output</em> serve the purpose of reading the input and writing the output respectively.
+It is sufficient to know the <strong>Core</strong> and the <strong>Model</strong> to handle input and output operations.
+As a result, the implementations are accessible to all the custom implementations of the agents.</p>
+<h3 id="device"><a class="header" href="#device">Device</a></h3>
+<p><em>disolv-device</em> is the outermost layer in the architecture that is dependent on all the above layers.
+The implementation is scenario dependent.
+Disolv supports multiiple types of devices, each with their own models.
+If there are differences beyond the model parameters, then an entirely new device type can also be defined.
+The advantage of the onion architecture is that the multiple device implementation does not require any modifications to the core.
+If necessary traits are implemented, then any number of custom device implementations can be provided and Disolv will simulate them.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../introduction.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../design/workflow.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../basics/basics.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../core/core.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -193,11 +221,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../introduction.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../design/workflow.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../basics/basics.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../core/core.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
