--- a/book/design/software.html
+++ b/book/design/software.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Installation - Disolv Documentation</title>
+        <title>Software - Disolv Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html" class="active"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../design/design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/concepts.html"><strong aria-hidden="true">3.1.</strong> Concept</a></li><li class="chapter-item expanded "><a href="../design/software.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="../design/architecture.html"><strong aria-hidden="true">3.3.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../design/workflow.html"><strong aria-hidden="true">3.4.</strong> Workflow</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/crates.html"><strong aria-hidden="true">4.</strong> Crates</a></li><li class="chapter-item expanded "><a href="../core/core.html"><strong aria-hidden="true">5.</strong> Core</a></li><li class="chapter-item expanded "><a href="../models/models.html"><strong aria-hidden="true">6.</strong> Models</a></li><li class="chapter-item expanded "><a href="../devices/devices.html"><strong aria-hidden="true">7.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../devices/vehicles.html"><strong aria-hidden="true">7.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="../devices/rsu.html"><strong aria-hidden="true">7.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="../devices/controller.html"><strong aria-hidden="true">7.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="../network/network.html"><strong aria-hidden="true">8.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../network/resources.html"><strong aria-hidden="true">8.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../network/slice.html"><strong aria-hidden="true">8.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../network/bs.html"><strong aria-hidden="true">8.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../input/input.html"><strong aria-hidden="true">9.</strong> Input</a></li><li class="chapter-item expanded "><a href="../output/output.html"><strong aria-hidden="true">10.</strong> Output</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../design/design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/concepts.html"><strong aria-hidden="true">3.1.</strong> Concept</a></li><li class="chapter-item expanded "><a href="../design/software.html" class="active"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="../design/architecture.html"><strong aria-hidden="true">3.3.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../design/workflow.html"><strong aria-hidden="true">3.4.</strong> Workflow</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/crates.html"><strong aria-hidden="true">4.</strong> Crates</a></li><li class="chapter-item expanded "><a href="../core/core.html"><strong aria-hidden="true">5.</strong> Core</a></li><li class="chapter-item expanded "><a href="../models/models.html"><strong aria-hidden="true">6.</strong> Models</a></li><li class="chapter-item expanded "><a href="../devices/devices.html"><strong aria-hidden="true">7.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../devices/vehicles.html"><strong aria-hidden="true">7.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="../devices/rsu.html"><strong aria-hidden="true">7.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="../devices/controller.html"><strong aria-hidden="true">7.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="../network/network.html"><strong aria-hidden="true">8.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../network/resources.html"><strong aria-hidden="true">8.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../network/slice.html"><strong aria-hidden="true">8.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../network/bs.html"><strong aria-hidden="true">8.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../input/input.html"><strong aria-hidden="true">9.</strong> Input</a></li><li class="chapter-item expanded "><a href="../output/output.html"><strong aria-hidden="true">10.</strong> Output</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,17 +173,51 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
+                        <h1 id="software-decisions"><a class="header" href="#software-decisions">Software Decisions</a></h1>
+<h3 id="rust"><a class="header" href="#rust">Rust</a></h3>
+<p>The goal of scalability necessitates the selection of programming language capable of supporting high-performance application.
+Naturally, the choices are C++ and Rust.
+C++ is a tried and tested tool in the simulation development domain (SUMO and ns-3 are C++ based).
+However, the memory management issues can hinder a new user from exploiting the full capabilites of the simulator.
+The borrow-checker of Rust prevents many memory-safety issues that a user will inevitably commit in C++.
+We implemented Disolv in Rust to enable contributions through extensions with minimal barriers.
+An added benefit is that Rust inherently supports AI applications through an evolving ecosystem.
+This facilitates high performance evaluations of AI oriented studies.
+Further, support for interoperability with Python plugs any gaps in the AI ecosystem of Rust.</p>
+<h3 id="links"><a class="header" href="#links">Links</a></h3>
+<p>There is no detailed protocol stack implementation.
+However, it is necessary for the agents to know their surrounding agents.
+This operation can be expensive and does not scale well for city scale scenarios.
+An agent is said to have a link with a neighbour if it can interact with the neighbour in that particular instant.
+This does not concern with any <em>link</em> in the context of networking.
+In other words, the link data is a mere information of neighbors available to each agent, not the channel characteristics.
+Our initial implementation of the link calculation module was in Python.
+Considering the enormous time consumed by this process, we ported the implementation to Rust, which resulted in substantial performance gains.
+Below is the table containing execution times of link calculation modules.</p>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: left">Nodes</th><th style="text-align: center">Simulation Duration</th><th style="text-align: center">Python</th><th style="text-align: right">Rust</th></tr></thead><tbody>
+<tr><td style="text-align: left">2200</td><td style="text-align: center">3800s</td><td style="text-align: center">2400s</td><td style="text-align: right">120s</td></tr>
+</tbody></table>
+</div>
+<p>The table highlights the performance gains obtained by porting the link calculation module to Rust.
+The current model of link has two modes of computing links.
+One is the circular disk model, where all the neighbours within a certain radius are considered to have links with the agent.
+Another model is the n-nearest neighbour model, where a user-defined number of neighbours are considered as links of an agent.
+These models can be further extended to support directional radios, region-based communication ranges and many other real-world aspects.</p>
+<h3 id="traces"><a class="header" href="#traces">Traces</a></h3>
+<p>Vehicular traces can be obtained from any mobility simulator or real-world sources.
+A pre-processing module is provided to convert the mobility traces to Disolv-readable format.
+This can be extended to support a new trace source.
+Since this is a one-time process, the implementation is carried out in Python.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../introduction.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../design/concepts.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../basics/basics.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../design/architecture.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -193,11 +227,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../introduction.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../design/concepts.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../basics/basics.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../design/architecture.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
