--- a/book/devices/vehicles.html
+++ b/book/devices/vehicles.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
-<html lang="en" class="sidebar-visible no-js light">
+<html lang="en" class="light" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Components - advaitars Documentation</title>
+        <title>Vehicles - Disolv Documentation</title>
 
 
         <!-- Custom HTML head -->
         
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="#ffffff" />
+        <meta name="theme-color" content="#ffffff">
 
         <link rel="icon" href="../favicon.svg">
         <link rel="shortcut icon" href="../favicon.png">
@@ -31,7 +31,7 @@
         <!-- Custom theme stylesheets -->
 
     </head>
-    <body>
+    <body class="sidebar-visible no-js">
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
@@ -61,31 +61,38 @@
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
             var html = document.querySelector('html');
-            html.classList.remove('no-js')
             html.classList.remove('light')
             html.classList.add(theme);
-            html.classList.add('js');
+            var body = document.querySelector('body');
+            body.classList.remove('no-js')
+            body.classList.add('js');
         </script>
+
+        <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
 
         <!-- Hide / unhide sidebar before it is displayed -->
         <script>
-            var html = document.querySelector('html');
+            var body = document.querySelector('body');
             var sidebar = null;
+            var sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
             if (document.body.clientWidth >= 1080) {
                 try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch(e) { }
                 sidebar = sidebar || 'visible';
             } else {
                 sidebar = 'hidden';
             }
-            html.classList.remove('sidebar-visible');
-            html.classList.add("sidebar-" + sidebar);
+            sidebar_toggle.checked = sidebar === 'visible';
+            body.classList.remove('sidebar-visible');
+            body.classList.add("sidebar-" + sidebar);
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../architecture/architecture.html"><strong aria-hidden="true">2.</strong> Architecture</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../architecture/components.html" class="active"><strong aria-hidden="true">2.1.</strong> Components</a></li></ol></li><li class="chapter-item expanded "><a href="../concepts/concepts.html"><strong aria-hidden="true">3.</strong> Concepts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../concepts/vanet.html"><strong aria-hidden="true">3.1.</strong> VANET</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../design/design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/concepts.html"><strong aria-hidden="true">3.1.</strong> Concept</a></li><li class="chapter-item expanded "><a href="../design/software.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="../design/architecture.html"><strong aria-hidden="true">3.3.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../design/workflow.html"><strong aria-hidden="true">3.4.</strong> Workflow</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/crates.html"><strong aria-hidden="true">4.</strong> Crates</a></li><li class="chapter-item expanded "><a href="../core/core.html"><strong aria-hidden="true">5.</strong> Core</a></li><li class="chapter-item expanded "><a href="../models/models.html"><strong aria-hidden="true">6.</strong> Models</a></li><li class="chapter-item expanded "><a href="../devices/devices.html"><strong aria-hidden="true">7.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../devices/vehicles.html" class="active"><strong aria-hidden="true">7.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="../devices/rsu.html"><strong aria-hidden="true">7.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="../devices/controller.html"><strong aria-hidden="true">7.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="../network/network.html"><strong aria-hidden="true">8.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../network/resources.html"><strong aria-hidden="true">8.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../network/slice.html"><strong aria-hidden="true">8.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../network/bs.html"><strong aria-hidden="true">8.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../input/input.html"><strong aria-hidden="true">9.</strong> Input</a></li><li class="chapter-item expanded "><a href="../output/output.html"><strong aria-hidden="true">10.</strong> Output</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -116,9 +123,9 @@
                                 <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
-                        <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
+                        <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
-                        </button>
+                        </label>
                         <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
                             <i class="fa fa-paint-brush"></i>
                         </button>
@@ -134,7 +141,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">advaitars Documentation</h1>
+                    <h1 class="menu-title">Disolv Documentation</h1>
 
                     <div class="right-buttons">
                         <a href="../print.html" title="Print this book" aria-label="Print this book">
@@ -166,17 +173,20 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="components"><a class="header" href="#components">Components</a></h1>
+                        <h3 id="vehicles"><a class="header" href="#vehicles">Vehicles</a></h3>
+<p>Vehicles are the primary <em>consumers</em> of a majority of ITS applications.
+They can also act as providers of valuable input data for some of the traffic management applications.
+They can communicate with neighbouring vehicles and the infrastructure within a certain range.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../architecture/architecture.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../devices/devices.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../concepts/concepts.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../devices/rsu.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -186,11 +196,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../architecture/architecture.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../devices/devices.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../concepts/concepts.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../devices/rsu.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
