added: documentation for design decisions from PADS (wip)

--- a/book/print.html
+++ b/book/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="design/design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="design/concepts.html"><strong aria-hidden="true">3.1.</strong> Concept</a></li><li class="chapter-item expanded "><a href="design/software.html"><strong aria-hidden="true">3.2.</strong> Software</a></li><li class="chapter-item expanded "><a href="design/architecture.html"><strong aria-hidden="true">3.3.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="design/workflow.html"><strong aria-hidden="true">3.4.</strong> Workflow</a></li></ol></li><li class="chapter-item expanded "><a href="crates/crates.html"><strong aria-hidden="true">4.</strong> Crates</a></li><li class="chapter-item expanded "><a href="core/core.html"><strong aria-hidden="true">5.</strong> Core</a></li><li class="chapter-item expanded "><a href="models/models.html"><strong aria-hidden="true">6.</strong> Models</a></li><li class="chapter-item expanded "><a href="devices/devices.html"><strong aria-hidden="true">7.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="devices/vehicles.html"><strong aria-hidden="true">7.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="devices/rsu.html"><strong aria-hidden="true">7.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="devices/controller.html"><strong aria-hidden="true">7.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="network/network.html"><strong aria-hidden="true">8.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="network/resources.html"><strong aria-hidden="true">8.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="network/slice.html"><strong aria-hidden="true">8.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="network/bs.html"><strong aria-hidden="true">8.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="input/input.html"><strong aria-hidden="true">9.</strong> Input</a></li><li class="chapter-item expanded "><a href="output/output.html"><strong aria-hidden="true">10.</strong> Output</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="design/design.html"><strong aria-hidden="true">3.</strong> Why Disolv?</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="design/mobility.html"><strong aria-hidden="true">3.1.</strong> Mobility</a></li><li class="chapter-item expanded "><a href="design/links.html"><strong aria-hidden="true">3.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="design/streams.html"><strong aria-hidden="true">3.3.</strong> Streams</a></li><li class="chapter-item expanded "><a href="design/messages.html"><strong aria-hidden="true">3.4.</strong> Messages</a></li><li class="chapter-item expanded "><a href="design/discrete.html"><strong aria-hidden="true">3.5.</strong> Discrete-time</a></li></ol></li><li class="chapter-item expanded "><a href="decisions/decisions.html"><strong aria-hidden="true">4.</strong> Software decisions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="decisions/software.html"><strong aria-hidden="true">4.1.</strong> Software</a></li><li class="chapter-item expanded "><a href="decisions/architecture.html"><strong aria-hidden="true">4.2.</strong> Architecture</a></li></ol></li><li class="chapter-item expanded "><a href="crates/crates.html"><strong aria-hidden="true">5.</strong> Crates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="core/core.html"><strong aria-hidden="true">5.1.</strong> Core</a></li><li class="chapter-item expanded "><a href="devices/devices.html"><strong aria-hidden="true">5.2.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="devices/vehicles.html"><strong aria-hidden="true">5.2.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="devices/rsu.html"><strong aria-hidden="true">5.2.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="devices/controller.html"><strong aria-hidden="true">5.2.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="models/models.html"><strong aria-hidden="true">5.3.</strong> Models</a></li><li class="chapter-item expanded "><a href="network/network.html"><strong aria-hidden="true">5.4.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="network/resources.html"><strong aria-hidden="true">5.4.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="network/slice.html"><strong aria-hidden="true">5.4.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="network/bs.html"><strong aria-hidden="true">5.4.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="input/input.html"><strong aria-hidden="true">5.5.</strong> Input</a></li><li class="chapter-item expanded "><a href="output/output.html"><strong aria-hidden="true">5.6.</strong> Output</a></li></ol></li><li class="chapter-item expanded "><a href="workflow/workflow.html"><strong aria-hidden="true">6.</strong> Workflow</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -252,27 +252,74 @@ Some examples are -</p>
 <li><a href="https://www.nsnam.org/">ns-3</a></li>
 <li><a href="https://www.nsnam.org/">SUMO</a></li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="design"><a class="header" href="#design">Design</a></h1>
-<p>Disolv is an agent-based model with Discrete-time based progression.
-The primary goal of Disolv is to support large-scale evaluation of VANET studies.
-As a result, all the design decisions of Disolv are oriented towards performance improvements when compared to state-of-the-art VANET simulators.
-We describe the conceptual design and the software implementation decisions.
-A typical workflow is imagined and relevant guidelines are provided to better exploit Disolv capabilities.</p>
-<ul>
-<li><a href="design/./concepts.html">Concept</a></li>
-<li><a href="design/./software.html">Software</a></li>
-<li><a href="design/./architecture.html">Architecture</a></li>
-<li><a href="design/./workflow.html">Workflow</a></li>
-</ul>
-<p>More details about the design decisions and the motivation for designing the simulator are accepted for presentation at <a href="https://dl.acm.org/conference/pads/proceedings">SIGSIM - PADS '24</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="conceptual-decisions"><a class="header" href="#conceptual-decisions">Conceptual Decisions</a></h1>
-<p>There are five key decisions involved in the design of the architecture of Disolv.
-All the decisions are taken with the motivation of enabling performant simulation of VANET studies.</p>
-<h3 id="vehicular-traces"><a class="header" href="#vehicular-traces">Vehicular Traces</a></h3>
-<h3 id="pre-computed-links"><a class="header" href="#pre-computed-links">Pre-computed Links</a></h3>
-<h3 id="streams"><a class="header" href="#streams">Streams</a></h3>
-<h3 id="messages"><a class="header" href="#messages">Messages</a></h3>
-<h3 id="no-events"><a class="header" href="#no-events">No Events</a></h3>
+<p>Disolv is an agent-based model with Discrete-time based progression.
+A typical VANET simulator can be imagined to be a combination of high-fidelity mobility and network simulators.
+The problem under study constitutes the application.
+Together, the architecture looks as shown below:</p>
+<p align="center">
+  <img style="max-width: 45%; height: auto;" src="design/../resources/images/design/vanet_sim.png">
+</p>
+<p>This is how any VANET simulator such as Veins is modeled.</p>
+<p>The primary goal of Disolv is to support large-scale evaluation of VANET studies.
+As a result, all the design decisions of Disolv are oriented towards performance improvements when compared to state-of-the-art VANET simulators.
+We morph the above simulator idea into an ITS simulator with applications taking the centre stage.
+There will be mobility and network components, but they are not the main focus of the modeling.
+Hence, Disolv conceptually looks as shown below:</p>
+<p align="center">
+  <img style="max-width: 45%; height: auto;" src="design/../resources/images/design/sim_concept.png">
+</p>
+<p>How we reach from the VANET simulator to ITS simulator is the main focus of this section.
+Several design aspects are incorporated to achieve this and we will look at them in detail.</p>
+<ul>
+<li><a href="design/./design/mobility.html">Mobility</a></li>
+<li><a href="design/./design/links.html">Links</a></li>
+<li><a href="design/./design/streams.html">Streams</a></li>
+<li><a href="design/./design/messages.html">Messages</a></li>
+<li><a href="design/./design/discrete.html">Discrete-time</a></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="mobility"><a class="header" href="#mobility">Mobility</a></h1>
+<p>One of the components of a VANET simulator is the mobility component.
+Mobility modeling is a complex task in itself and has a dedicated community behind it.
+Some of the mobility simulators are <a href="https://citymos.net/">CityMoS</a>, <a href="https://www.ptvgroup.com/en/products/ptv-vissim">PTV VISSIM</a>,
+<a href="https://sumo.dlr.de/docs/index.html">SUMO</a>, <a href="https://www.matsim.org/">MATSim</a> etc.
+This is unlike the wireless network simulations, where the node mobility can be easily modeled with a random mobility model.
+Hence, the modeling complexity is high and has a performance cost.</p>
+<p>On a broad level, ITS applications can be classified into two types.
+The first type is where explicit control of the vehicles is essential.
+An example would be <a href="https://ieeexplore.ieee.org/abstract/document/8280871">truck platooning</a> studies.
+The second type is where no control of the vehicles is required in the study.
+For example, network planning studies about the infrastructure placement.
+Disolv is designed to cater to the applications where explicit control of the vehicles is NOT essential.
+Hence, the mobility modeling is greatly simplified.
+Only vehicular traces are sufficient to represent the vehicular mobility.
+This removes a significant performance overhead from the simulations, thereby allowing the user to spend the computing on their application.
+If the application is simple enough, then it allows room for extensive scalability.</p>
+<p>The approach restricts the usability of Disolv for the applications that control the vehicles.
+However, majority of the applications are on the planning side where such control is not desired.
+The introduction of 5G and 6G will further explode the possible ITS applications.
+AI is expected to be a major player in both network management as well as on the application side.
+The introduction of smart city paradigm and the continued embracing of its ideas put more onus on mobility to interact with other smart city systems.
+This increases the possibilities even more and leads to several new auxiliary use cases that do not require vehicular control.
+Based on this intuition, we imagine Disolv to remain usable for plenty of use cases.</p>
+<p>The process of converting a mobility trace to Disolv-readable format is supported by our pre-processing pipeline.
+Any mobility simulator output can be converted to Disolv-readable format.
+As of now, SUMO is supported.
+This has an advantage of feeding a real-world mobility data as an input to the simulator.</p>
+<p align="center">
+  <img style="max-width: 45%; height: auto;" src="design/../resources/images/design/mobility-pre.png">
+</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="links"><a class="header" href="#links">Links</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="streams"><a class="header" href="#streams">Streams</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="messages"><a class="header" href="#messages">Messages</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="discrete-time"><a class="header" href="#discrete-time">Discrete-time</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="design-decisions"><a class="header" href="#design-decisions">Design decisions</a></h1>
+<p>In addition to the conceptual decisions, some other design decisions are necessary to achieve the goals we set out for Disolv.
+These are discussed in this section.</p>
+<ul>
+<li><a href="decisions/./decisions/software.html">Software</a></li>
+<li><a href="decisions/./decisions/architecture.html">Architecture</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="software-decisions"><a class="header" href="#software-decisions">Software Decisions</a></h1>
 <h3 id="rust"><a class="header" href="#rust">Rust</a></h3>
 <p>The goal of scalability necessitates the selection of programming language capable of supporting high-performance application.
@@ -284,7 +331,7 @@ We implemented Disolv in Rust to enable contributions through extensions with mi
 An added benefit is that Rust inherently supports AI applications through an evolving ecosystem.
 This facilitates high performance evaluations of AI oriented studies.
 Further, support for interoperability with Python plugs any gaps in the AI ecosystem of Rust.</p>
-<h3 id="links"><a class="header" href="#links">Links</a></h3>
+<h3 id="links-1"><a class="header" href="#links-1">Links</a></h3>
 <p>There is no detailed protocol stack implementation.
 However, it is necessary for the agents to know their surrounding agents.
 This operation can be expensive and does not scale well for city scale scenarios.
@@ -309,7 +356,6 @@ A pre-processing module is provided to convert the mobility traces to Disolv-rea
 This can be extended to support a new trace source.
 Since this is a one-time process, the implementation is carried out in Python.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="architecture"><a class="header" href="#architecture">Architecture</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="simulation-workflow"><a class="header" href="#simulation-workflow">Simulation Workflow</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="disolv-crates"><a class="header" href="#disolv-crates">Disolv Crates</a></h1>
 <p>Simulator is divided into multiple crates to enable modular design.
 An onion-like layered design is incorporated with crates arranged in an hierarchical manner.</p>
@@ -340,7 +386,6 @@ If there are differences beyond the model parameters, then an entirely new devic
 The advantage of the onion architecture is that the multiple device implementation does not require any modifications to the core.
 If necessary traits are implemented, then any number of custom device implementations can be provided and Disolv will simulate them.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="core-1"><a class="header" href="#core-1">Core</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="agent-models"><a class="header" href="#agent-models">Agent Models</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="devices"><a class="header" href="#devices">Devices</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h3 id="vehicles"><a class="header" href="#vehicles">Vehicles</a></h3>
 <p>Vehicles are the primary <em>consumers</em> of a majority of ITS applications.
@@ -353,6 +398,7 @@ From the perspective of VANET, a vehicle and RSU has similar radio capabilities 
 <p>This is a virtual component analogoous to the traffic management centre in the real world.
 It is possible that a large city can have multiple hierarchies of control centres.
 It serves the vehicles with their requests and takes decisions on traffic management based on the collected data.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="agent-models"><a class="header" href="#agent-models">Agent Models</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="network"><a class="header" href="#network">Network</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="resources"><a class="header" href="#resources">Resources</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="slice"><a class="header" href="#slice">Slice</a></h1>
@@ -363,6 +409,7 @@ The location of the Base Station is important, in particular, for the newer prot
 The services offered to the devices in the vicinity depends on the Base Station.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="input"><a class="header" href="#input">Input</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="output"><a class="header" href="#output">Output</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="workflow"><a class="header" href="#workflow">Workflow</a></h1>
 
                     </main>
 
